tests/samples/negative/types/literal_invalid_float_suffix.ax
module literal_invalid_float_suffix;

fn main() -> i32 {
    let value = 1.0u8;
    return ((value) as i32);
}
